[gd_scene load_steps=20 format=3 uid="uid://b1nmh8sejodll"]

[ext_resource type="Script" path="res://UI/Casting/Casting.gd" id="1_5jy0a"]
[ext_resource type="Texture2D" uid="uid://cy80iix04xik" path="res://UI/Casting/Runes/Art/EOFF.png" id="1_swavd"]
[ext_resource type="Texture2D" uid="uid://yguj16frh76p" path="res://UI/Casting/Runes/Art/AOFF.png" id="1_t31rn"]
[ext_resource type="Texture2D" uid="uid://b5n6i3lc3v85x" path="res://UI/Casting/Runes/Art/ROFF.png" id="2_fhpra"]
[ext_resource type="Texture2D" uid="uid://dvr3aqgdok5ws" path="res://UI/Casting/Runes/Art/EON.png" id="3_f4apf"]
[ext_resource type="Texture2D" uid="uid://cb57qwxqgov7g" path="res://UI/Casting/Runes/Art/TOFF.png" id="3_t0vk1"]
[ext_resource type="Texture2D" uid="uid://clha32x2dffph" path="res://UI/Casting/Runes/Art/IOFF.png" id="4_dnmqh"]
[ext_resource type="Texture2D" uid="uid://cyqgqyh6g2irq" path="res://UI/Casting/Runes/Art/RON.png" id="5_0b2bc"]
[ext_resource type="Texture2D" uid="uid://bn2avtlmu5bwa" path="res://UI/Casting/Runes/Art/OOFF.png" id="5_grvc5"]
[ext_resource type="Texture2D" uid="uid://h0i8ry6nv623" path="res://UI/Casting/Runes/Art/SOFF.png" id="7_6qifc"]
[ext_resource type="Texture2D" uid="uid://c41qqes6jdw1c" path="res://UI/Casting/Runes/Art/TON.png" id="7_v25mk"]
[ext_resource type="Texture2D" uid="uid://t2oeqlqb0wp8" path="res://UI/Casting/Runes/Art/HOFF.png" id="8_7xryv"]
[ext_resource type="Texture2D" uid="uid://hsg32dplcwig" path="res://UI/Casting/Runes/Art/ION.png" id="9_g066r"]
[ext_resource type="Texture2D" uid="uid://bqidk2j2raseu" path="res://UI/Casting/Runes/Art/NOFF.png" id="9_u288j"]
[ext_resource type="Texture2D" uid="uid://vwinexaoypgm" path="res://UI/Casting/Runes/Art/OON.png" id="11_lx1im"]
[ext_resource type="Texture2D" uid="uid://d15ad6fqtpie7" path="res://UI/Casting/Runes/Art/AON.png" id="13_rn421"]
[ext_resource type="Texture2D" uid="uid://c23avply2ohhc" path="res://UI/Casting/Runes/Art/SON.png" id="15_1qog0"]
[ext_resource type="Texture2D" uid="uid://8fm1sikpt6t7" path="res://UI/Casting/Runes/Art/HON.png" id="17_uwh7s"]
[ext_resource type="Texture2D" uid="uid://b1eptdxhd25bb" path="res://UI/Casting/Runes/Art/NON.png" id="19_rsqqp"]

[node name="Casting" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_5jy0a")

[node name="GridContainer" type="GridContainer" parent="."]
texture_filter = 1
custom_minimum_size = Vector2(24, 24)
layout_mode = 0
offset_right = 62.0
offset_bottom = 62.0
columns = 3

[node name="E" type="TextureButton" parent="GridContainer"]
layout_mode = 2
toggle_mode = true
texture_normal = ExtResource("1_swavd")
texture_pressed = ExtResource("3_f4apf")

[node name="R" type="TextureButton" parent="GridContainer"]
layout_mode = 2
toggle_mode = true
texture_normal = ExtResource("2_fhpra")
texture_pressed = ExtResource("5_0b2bc")

[node name="T" type="TextureButton" parent="GridContainer"]
layout_mode = 2
toggle_mode = true
texture_normal = ExtResource("3_t0vk1")
texture_pressed = ExtResource("7_v25mk")

[node name="I" type="TextureButton" parent="GridContainer"]
layout_mode = 2
toggle_mode = true
texture_normal = ExtResource("4_dnmqh")
texture_pressed = ExtResource("9_g066r")

[node name="O" type="TextureButton" parent="GridContainer"]
layout_mode = 2
toggle_mode = true
texture_normal = ExtResource("5_grvc5")
texture_pressed = ExtResource("11_lx1im")

[node name="A" type="TextureButton" parent="GridContainer"]
layout_mode = 2
toggle_mode = true
texture_normal = ExtResource("1_t31rn")
texture_pressed = ExtResource("13_rn421")

[node name="S" type="TextureButton" parent="GridContainer"]
layout_mode = 2
toggle_mode = true
texture_normal = ExtResource("7_6qifc")
texture_pressed = ExtResource("15_1qog0")

[node name="H" type="TextureButton" parent="GridContainer"]
layout_mode = 2
toggle_mode = true
texture_normal = ExtResource("8_7xryv")
texture_pressed = ExtResource("17_uwh7s")

[node name="N" type="TextureButton" parent="GridContainer"]
layout_mode = 2
toggle_mode = true
texture_normal = ExtResource("9_u288j")
texture_pressed = ExtResource("19_rsqqp")

[connection signal="pressed" from="GridContainer/E" to="." method="_on_e_pressed"]
[connection signal="pressed" from="GridContainer/R" to="." method="_on_r_pressed"]
[connection signal="pressed" from="GridContainer/T" to="." method="_on_t_pressed"]
[connection signal="pressed" from="GridContainer/I" to="." method="_on_i_pressed"]
[connection signal="pressed" from="GridContainer/O" to="." method="_on_o_pressed"]
[connection signal="pressed" from="GridContainer/A" to="." method="_on_a_pressed"]
[connection signal="pressed" from="GridContainer/S" to="." method="_on_s_pressed"]
[connection signal="pressed" from="GridContainer/H" to="." method="_on_h_pressed"]
[connection signal="pressed" from="GridContainer/N" to="." method="_on_n_pressed"]
